2001-05-12  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c (gncFileSaveAs): don't use a default filename

	* src/scm/report/hello-world.scm: put under utility menu

	* src/scm/report/welcome-to-gnucash.scm: don't show in menu

	* src/scm/report/iframe-url.scm: put under utility menu

	* src/scm/report.scm: add 'utility reports' menu

	* src/gnome/new-user-funs.c: add support for opening balances

	* src/gnome/gnc-amount-edit.c (gnc_amount_edit_evaluate): allow
	empty string as zero

	* src/gnome/new-user-callbacks.c: add support for opening balances

	* src/gnome/dialog-account.c (gnc_account_list_fill): fix warning
	(gnc_account_window_destroy_cb): destroy callback has no return
	(gnc_ui_to_account): reverse opening balance appropriately

	* src/engine/Account.c: change return type to const

2001-05-12  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/pnl.scm, account-piecharts.scm,
	account-summary.scm: Added price-source option. Use new function
	gnc:case-exchange-fn.

	* src/scm/date-utilities.scm (gnc:get-end-cur-fin-year): added
	function.

	* src/scm/options-utilities.scm (gnc:options-add-date-interval!):
	changed the order of relative dates - which order is best?

	* src/scm/report/balance-sheet.scm: use new function
	gnc:case-exchange-fn.

	* src/scm/commodity-utilities.scm (gnc:case-exchange-fn): add
	function.

	* src/scm/report/price-scatter.scm: adapted helper function name
	to other reports.

	* src/scm/report/price-scatter.scm: Extended option to use the
	pricedb as a price source.

	* src/scm/commodity-utilities.scm: Added functions for getting
	sorted commodity splits, for total-average-prices of a
	commodity-list, for instantaneous prices, for instantaneous prices
	of a commodity-list, and for cooking your morning coffee :)

	* src/scm/report-utilites.scm, html-utilities.scm: create new
	function (gnc:accounts-get-commodities), use it in
	html-utilities.scm.

	* src/scm/html-scatter.scm: add workaround for rgba color.
